<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Home</string>
    <string name="about_msg">This program is the sample application \n
	2011 sibo</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <!-- for searching device -->
    <string name="devicelist_refresh">Refresh</string>
    <string name="devicelist_autosearch">Auto Search</string>
    <string name="devicelist_manusearch">Manu Search</string>
    <string name="setting">Settings</string>
    <string name="connected">Connected</string>
    <string name="search_device">Search Devices</string>

    <!-- chart -->
    <string name="input_data">Input Data</string>
    <string name="view">View</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="current_device">Current Devices</string>
    <string name="add_monitored">Add Monitored Appliance</string>
    <string name="add_unmonitored">Add Un-Monitored Appliance</string>
    <string name="edit_appliance">Edit Appliance</string>
    <string name="delete_appliciance">Delete Appliance</string>
    <string name="device_manager">Device Manager</string>
    <string name="user_manager">User Manager</string>
    <string name="utility_manager">Utility Manager</string>
    <string name="device_links">Device Links</string>
    <string name="network">Network</string>
    <string name="current_users">Current Users</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="water">Water</string>
    <string name="usage_alarm">Usage Alarm</string>

    <!-- add user -->
    <string name="user_name">User Name:</string>
    <string name="user_pin">User PIN:</string>
    <string name="retype_user_pin">Re-Type User PIN:</string>
    <string name="user_type">User Type:</string>
    <string name="confirm">Confirm</string>
    <string name="administrator">Administrator</string>
    <string name="limited">Limited</string>
    <string name="change_pin">Change PIN</string>
    <string name="new_pin">New PIN:</string>
    <string name="retype_new_pin">Re-Type New PIN:</string>
    <string name="administrator_pin">Administrator PIN</string>
    <string name="add_device">Add Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="edit_device">Edit Device</string>
    <string name="next">Next</string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">Mac Address</string>
    <string name="user_defined_name">User Defined Name</string>
    <string name="device_type">Device Type</string>
    <string name="brand">Brand</string>
    <string name="model_number">Model Number</string>
    <string name="kw_per_hour">Kw Per Hour</string>
    
    <string name="energy_cost_peak">Energy Cost Peak</string>
    <string name="peak_time_start">Peak time start</string>
    <string name="peak_time_finish">Peak time finish</string>
    <string name="energy_cost_off_peak">Energy Cost Off-Peak</string>
    <string name="energy_costs">Energy Costs</string>
    <string name="electricity_cost">Electricity Costs</string>
    <string name="quarter_start_day">Quarter start day</string>
    <string name="number_of_billing_days">Number of billing days</string>
    <string name="last_bill_energy_usage">Last bill energy usage</string>
    <string name="last_bill_carbon_emissions">Last bill carbon emissions</string>
    <string name="supply_charge">Supply charge</string>
    <string name="done">Done</string>
    <string name="tonnes">Tonnes</string>
    <string name="estimated_hours_used_per_week">Estimated hours used per week</string>

    <!-- time -->
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <!-- message -->
    <string name="msg_delete_user">Are you sure want to delete user?</string>
    <string name="msg_delete_device">Are you sure want to delete device?</string>

    <!-- water -->
    <string name="water_cost_step_1">Water Costs-Step 1</string>
    <string name="water_cost_step_2">Water Costs-Step 2</string>
    <string name="water_step_1_limit">Water Step 1 Limit</string>
    <string name="water_usage_step_1">Water Usage Step 1</string>
    <string name="water_usage_step_2">Water Usage Step 2</string>
    <string name="seasonal_sewage_factor">Seasonal Sewage Factor</string>
    <string name="sewage_discharge_factor">Sewage Discharge Factor</string>
    <string name="sewage_discharge_price">Sewage Discharge Price</string>
    <string name="sewage_system_charge">Sewage System Charge</string>
    <string name="Water_supply_system_charge">Water Supply System Charge</string>
    <string name="water_costs">Water Costs</string>

    <!-- Gas -->
   <string name="gas_costs">Gas Costs</string>

    <!-- Alarm -->
    <string name="usage_alarms">Usage Alarms</string>
    <string name="system_kwh_usage_alarms">System Usage kWh any given time</string>

</resources>