<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/myActionBar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/gray" >

        <Button
            android:id="@+id/myButtonBack"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/myTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" 
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/myButtonHome"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/home" />

            <Button
                android:id="@+id/myButtonSetting"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/setting" />

            <Button
                android:id="@+id/myButtonHelp"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/help" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/myTextviewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/myButtonInPutData"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/input_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/myButtonDay"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/day" />

            <Button
                android:id="@+id/myButtonWeek"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/week" />

            <Button
                android:id="@+id/myButtonMonth"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/month" />

            <Button
                android:id="@+id/myButtonQuarter"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/quarter" />

            <Button
                android:id="@+id/myButtonYear"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:text="@string/year" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myGraphicalView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:background="@color/white" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>