<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:orientation="vertical" >

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="bottom" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/current_users"
            android:textColor="@color/black"
            android:textSize="18dp" 
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" >

            <ListView
                android:id="@+id/myListViewDevices"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_round_corner" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/myButtonAddUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/device_button"
                android:text="@string/add_user"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/myButtonEditUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/device_button"
                android:text="@string/edit_user"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/myButtonDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/device_button"
                android:text="@string/delete_user"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>