<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/myListViewObjects"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="@drawable/background_round_corner" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_defined_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextAddUserDefined_name"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_type"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextDeviceType"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>
            
               <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brand"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextBrand"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>
            
               <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/model_number"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextModelNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>
            
               <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kw_per_hour"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextKwPerHour"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>
            
               
                      <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/estimated_hours_used_per_week"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_small_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round_corner" >

                    <EditText
                        android:id="@+id/myEditTextEstimatedHour"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent" />
                </LinearLayout>
            </LinearLayout>
            
               
            
            
        </LinearLayout>
    </LinearLayout>

   
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >

        <Button
            android:id="@+id/myButtonConfirm"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="@dimen/text_size"
            android:layout_alignParentBottom="true" 
             android:background="@drawable/device_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/text_color"
            android:text="Page 2 of 2"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</LinearLayout>